@@ -90,6 +90,8 @@ AwnSettings* awn_task_get_settings (AwnTask *task);
 
 void awn_task_refresh_icon_geometry (AwnTask *task);
 
+void awn_task_update_icon (AwnTask *task);
+
 /* DBUS CALLS */
 void awn_task_set_custom_icon (AwnTask *task, GdkPixbuf *icon);
 void awn_task_unset_custom_icon (AwnTask *task);
